<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginRight="20dp"
    android:background=" 	#F0FFFF"
    android:orientation="vertical"
    tools:context=".AdminMain">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/admin_dashboard"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAdminAddTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:text="@string/add_remove_teacher"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnAdminAddStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/add_remove_student"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnAdminCreateAttendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/create_attendance"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnAttendanceRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/attendance_record"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnAdminChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/change_password"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnAdminLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/logout"
        android:textSize="16sp" />
</androidx.appcompat.widget.LinearLayoutCompat>
